# bottender

./: .gitignore  2_evaluate_pretrained_policy.py  3_train_policy.py  Dockerfile  INFERENCE.md  LICENSE  README.md  environment.yml  inference.py  lerobot.ipynb  requirements.lock.txt  run-dev.sh
ros2_packages/: COMMANDS.md  requirements.txt
ros2_packages/ai_hackathon/: setup.cfg  setup.py
ros2_packages/ai_hackathon/ai_hackathon/: debug_smolvla.py  my_node.py
ros2_packages/compiled/install/: local_setup.sh  setup.sh
ros2_packages/compiled/install/ai_hackathon/share/ai_hackathon/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_packages/compiled/install/sereact_humanoid_msg/share/sereact_humanoid_msg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_packages/compiled/install/sereact_humanoid_msg/share/sereact_humanoid_msg/cmake/: export_sereact_humanoid_msg__rosidl_generator_cExport-noconfig.cmake  export_sereact_humanoid_msg__rosidl_generator_cExport.cmake  export_sereact_humanoid_msg__rosidl_generator_cppExport.cmake  (+14 more)
ros2_packages/sereact_humanoid_msg/: CMakeLists.txt  package.xml
ros2_packages/sereact_humanoid_msg/action/: Command.action
ros2_packages/sereact_humanoid_msg/msg/: FingerGripperTarget.msg  Observation.msg
ros2_packages/sereact_humanoid_msg/srv/: NextObjectToPick.srv  NextObjectToPick.srvZone.Identifier  SetLog.srv  SetTarget.srv
src/ai_hackathon/: package.xml  setup.py
src/gripper_loop/: package.xml  setup.cfg  setup.py
src/gripper_loop/gripper_loop/: gripper_loop_node.py  policy_inference_node.py
src/sereact_humanoid_msg/msg/: AlignedFrame.msg  DesiredJoints.msg  FingerGripperState.msg  ObjectObservation.msg  ObjectTracking.msg  ObservationAction.msg  Teleop.msg
